--- a/.gitignore
+++ b/.gitignore
@@ -7,13 +7,15 @@
 # Ignore bundler config.
 /.bundle
 
-# Ignore the default SQLite database.
-/db/*.sqlite3
-/db/*.sqlite3-journal
-
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+
+# Ignore bower components
+vendor/assets/bower_components
+
+# Ignore DS_Store
+.DS_Store
 
 # ignore .env file
 .env
